syntax = "proto3";

package todoservice;

option go_package = "./proto;todoservice";

service TodoService {
	rpc Call(CallRequest) returns (CallResponse) {}
	rpc CreateNewTodo(TodoItem) returns(CallResponse) {}
	rpc GetAllTodos(Void) returns(AllTodoItems) {}
	rpc ClientStream(stream ClientStreamRequest) returns (ClientStreamResponse) {}
	rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamResponse) {}
	rpc BidiStream(stream BidiStreamRequest) returns (stream BidiStreamResponse) {}
}

message Void {}

message TodoItem {
	string text = 1;
	optional string tags = 2;
	optional string color = 3;
}

message AllTodoItems {
	repeated TodoItem items = 1;
	optional string msg = 2;
	optional string status = 3;
}

message CallRequest {
	string name = 1;
}

message CallResponse {
	string msg = 1;
	optional string status = 2;
}

message ClientStreamRequest {
	int64 stroke = 1;
}

message ClientStreamResponse {
	int64 count = 1;
}

message ServerStreamRequest {
	int64 count = 1;
}

message ServerStreamResponse {
	int64 count = 1;
}

message BidiStreamRequest {
	int64 stroke = 1;
}

message BidiStreamResponse {
	int64 stroke = 1;
}


